2004-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  components -> avatars
	  rename and privatize addComponent to _addAvatar
	* flumotion/manager/manager.py:
	  getAvatarFor -> createAvatarFor
	* flumotion/test/test_manager.py:
	  rename Perspective to Avatar

2004-09-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  commenting some more, privatize a function

2004-09-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/config.py:
	* flumotion/common/registry.py:
	* flumotion/config/__init__.py:
	* flumotion/manager/worker.py:
	* flumotion/test/Makefile.am:
	* flumotion/test/test_config.py:
	* flumotion/utils/log.py:

	Move test_config to test_flumotion_config and add test_config for
	common/config. Write test suite for test_config and fix a couple
	of bugs meanwhile.
	
2004-09-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/http/http.py: Implement admin-password,
	fixes Ticket #10 

	* flumotion/manager/worker.py: Make <workers> optional

	* bin/flumotion-tester.in: Move imports down a little bit.

	* flumotion/component/http/http.py
	(MultifdSinkStreamer.client_removed_idle): Don't close the file
	descriptor here.
	(HTTPStreamingResource.removeClient): Call request.finish() and
	let python/twisted take care of closing the fd. Fixes a number of
	bugs. Together with latest version of multifdsink we have a much
	more stable server.

2004-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	* flumotion/component/http/http.py:
	  update at most once every second.  re-enable updating but not
	  with idle_add, but boolean, which doesn't care if it's threadsafe.

2004-09-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-tester.in:
	* flumotion/tester/client.py:
	* flumotion/tester/clientfactory.py:
	* flumotion/tester/httpclient.py:
	  provide a decent set of options to influence behaviour of static
	  http clients